
	* lib/Majordomo.pm:  (record_parser_data, _make_parser_data)  
	Store a record containing the date and count of commands issued by a 
	particular address.  At the moment, this is only used to
	restrict autoresponder loops.
	(_subscribe, _unsubscribe)  Do not alter the registry when
	an address is subscribed to or unsubscribed from an auxiliary 
	list.

	* setup/setup_func.pl:  (install_config_templates)  Run the
	Majordomo commands in the setup/config_commands file.  These
	commands currently establish the DEFAULT:personal template,
	which causes a separate copy of a posted message to be sent
	to each recipient of a mailing list.  The recipient's address
	is contained in the To: header, and a message footer with
	unsubscription instructions is added.

2001-01-05  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (announce) Add support for sending
	announcements to auxiliary lists.
	(_who) Add "owners" command mode, which displays the list
	owner addresses and the lists they administrate.  
	(sync_owners) New routine.  The GLOBAL:owners auxiliary list 
	is automatically updated to contain all of the owners' addresses, 
	including the deletion of addresses that are no longer owners.
	This routine is called by the "createlist-regen" command, by
	the "who-owners" command, and whenever the owners setting for
	a mailing list is changed.

2000-12-20  Michael Yount <csf@moscow.com>

	* lib/Mj/Format.pm:  (archive) Use format files for the archive
	command, which is supported by the text and wwwadm interfaces.

2000-12-19  Michael Yount <csf@moscow.com>

	* bin/mj_confirm:  Rewrite to use format files, have instructions,
	and be easier to navigate.

	* lib/Mj/Format.pm:  (who) Use hard-coded formatting for the
	plain who command for better speed.  The who-enhanced and who-bounces
	commands will be 5 to 10 times slower for large lists due to the 
	formatting substitutions.

	* lib/Mj/List.pm:  (_make_fs)  Cease using the filedir setting.
